<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name">Pets</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="hint_password">Write your password</string>
    <string name="hint_firstname">Write your first name</string>
    <string name="hint_lastname">Write your last name</string>
    <string name="hint_email">Write your email</string>
    <string name="firstname">First name</string>
    <string name="lastname">Last name</string>
    <string name="email">E-mail</string>
    <string name="toastregistered">The user has been registered successfully</string>
    <string name="alreadyregistered">The user already exists</string>
    <string name="noemptyfields">One or more fields are empty</string>
    <string name="cpassword">Confirm password</string>
    <string name="hint_cpassword">Write your password again</string>
    <string name="incorrectemail">The email isn\'t valid</string>
    <string name="toastlogged">Successful login</string>
    <string name="loginincorrect">The email or password is incorrect</string>
    <string name="toastpassconfirm">The passwords aren\'t the same</string>
    <string name="wrongpassword">The password must be longer than 5 characters and have uppercase, lowercase, numbers and symbols</string>
    <string name="wrongnames">First name and last name only must contain letters</string>
    <string name="maleusers">List male users</string>
    <string name="femaleusers">List female users</string>
    <string name="allusers">List all users</string>
    <string name="about_of">About of</string>
    <string name="logout">Logout</string>
    <string name="updateuser">Update user</string>
    <string name="deleteuser">Delete user</string>
    <string name="update">Update</string>
    <string name="userlist">User list</string>
    <string name="birth">Birth date</string>
    <string name="hint_birth">Select your birth date</string>
    <string name="phone">Phone</string>
    <string name="hint_phone">Write your phone number</string>
    <string name="gender">Gender</string>
    <string name="country">Country</string>
    <string name="toastupdated">The user has been updated successfully</string>
    <string name="toastdeleted">The user has been deleted successfully</string>
    <string name="createdByTitle">Created by:</string>
    <string name="author">Iván Camilo Narváez Vanegas</string>
    <string name="ageTitle">21 years old</string>
    <string name="careerTitle">Systems engineering</string>
    <string name="emailOfAuthor">ivannarvaez774@hotmail.com</string>

    <string-array name="countries_array">
        <item android:id="@+id/iteColombia">Colombia</item>
        <item android:id="@+id/iteUSA">United States</item>
        <item android:id="@+id/iteRussia">Russia</item>
        <item android:id="@+id/iteBrazil">Brazil</item>
        <item android:id="@+id/iteJapan">Japan</item>
    </string-array>

    <string-array name="genders_array">
        <item android:id="@+id/iteMale">Male</item>
        <item android:id="@+id/iteFemale">Female</item>
    </string-array>
    <string name="hint_country">Select your country</string>
    <string name="hint_gender">Select your gender</string>
</resources>
